Updated project blurbs, hid process sub-page and VPM mockup, added avatar opacity animation on hover, fixed visual spacing error with suffix-icon

--- a/src/styles/components/btn.scss
+++ b/src/styles/components/btn.scss
@@ -2,8 +2,9 @@
     position: relative;
     display: flex;
     align-items: center;
-    padding: 4px 8px;
+    padding: 8px 12px;
     width: max-content;
+    border-radius: 12px;
 
     background: $gradient;
     background-clip: text;
@@ -18,9 +19,5 @@
 
     .suffix-icon {
         margin-left: 8px;
-    }
-
-    &:hover, &:active {
-        background: rgba(255,255,255,0.05);
     }
 }
