--- a/src/styles/components/tag.scss
+++ b/src/styles/components/tag.scss
@@ -1,5 +1,5 @@
 .tag {
-    padding: 2px 8px;
+    padding: 4px 12px;
     border-radius: 50px;
     font-size: 14px;
     line-height: 20px;
